--- a/01-docker-terraform/Dockerfile
+++ b/01-docker-terraform/Dockerfile
@@ -1,5 +1,11 @@
-FROM python:3.9
+FROM python:3.9.1
 
-RUN pip install pandas
+run apt-get install wget
+RUN pip install pandas sqlalchemy psycopg2 pyarrow wheel
 
-ENTRYPOINT [ "bash" ]
+WORKDIR /app
+COPY ingest_data.py ingest_data.py
+#COPY ingest_taxi_zone_data.py ingest_taxi_zone_data.py
+
+ENTRYPOINT ["python", "ingest_data.py"]
+#ENTRYPOINT "bash"
